[package]
name = "rdf"
version = "0.1.0"
description = "RDF serialization format conversion tool."
keywords = ["rdf", "conversion"]
edition = "2024"
rust-version = "1.88"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
##hdt = "0.3.0"
hdt = {path = "/home/konrad/projekte/rust/hdt"}
serde = "1.0.219"
sophia = "0.9.0"

[dev-dependencies]
pretty_assertions = "1"
